--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
 body {
   background: #b6c5e3;
   font-family: 'Roboto', sans-serif;
-  margin-top: 3em;
 }
 
 #calculator {
   width: 300px;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  margin-left: 30px;
 }
 
 #display {
@@ -62,17 +65,6 @@ body {
   padding: 20px;
 }
 
-button {
-  font-size: 2em;
-  background: #0e111c;
-  color: #fff;
-  border: none;
-  margin-left: 0px;
-  margin-right: 0px;
-  height: 2em;
-  float: left;
-}
-
 #deleteAll:hover{
   background: #e34444;
 }
@@ -81,9 +73,11 @@ button {
   background: #00aed3;
 }
 
-button:hover {
-  background: #141827;
-  color: #fff;
+.container {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  justify-content: center;
 }
 
 .row {
@@ -97,3 +91,21 @@ button:hover {
 .three button {
   width: 50%;
 }
+
+button {
+  font-size: 2em;
+  background: #0e111c;
+  color: #fff;
+  border: none;
+  margin-left: 0px;
+  margin-right: 0px;
+  height: 2em;
+  float: left;
+}
+
+button:hover {
+  background: #141827;
+  color: #fff;
+}
+
+button:focus { outline:0 };
