--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,24 @@ body {
 .container {
   display: flex;
   flex-direction: row;
-  height: 100vh;
+  flex-wrap: wrap;
   justify-content: center;
+}
+
+.container-calc {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 20px 5px;
+}
+
+.info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 150px;
+  padding: 20px 5px;
+  font-size: 24px;
 }
 
 .support {
